Fixed content alignment

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
   --fifth-color: #ffffff;
   --sixth-color: #212529;
-  --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 body {
@@ -123,7 +123,9 @@ p,
   }
 
   .me {
-    width: 100px !important;
+    border: 2px solid var(--fourth-color);
+    margin-top: 25px !important;
+    width: 150px !important;
   }
 
   #about-page {
@@ -132,6 +134,10 @@ p,
 
   .about-info {
     font-size: 15px;
+    margin-top: 0px !important;
+  }
+  .info-col {
+    margin-top: 0px !important;
   }
 }
 
@@ -148,14 +154,15 @@ p,
   }
 }
 
-.me,
 .homepage-carousel,
 .presentation {
   margin-top: 200px !important;
 }
 
 .me {
-  width: 300px;
+  box-shadow: var(--box-shadow);
+  width: 340px;
+  margin-top: 195px;
 }
 
 #about-page {
@@ -189,7 +196,11 @@ p,
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgb(216, 173, 160)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
+.info-col {
+  margin-top: 150px;
+}
+
 .about-info {
-  margin-top: 80px;
+  margin-top: 15px;
   padding: 0px 90px;
 }
